# codedagent_assistmaigic

./: .env.example  README.md  agent.mermaid  entry-points.json  input.json  main.py  pyproject.toml  requirements.txt
.uipath/: .auth.json  .error_log  .telemetry.json  AssistmAIgic.0.0.2.nupkg  AssistmAIgic.0.0.3.nupkg  AssistmAIgic.0.0.4.nupkg  AssistmAIgic.0.0.5.nupkg  AssistmAIgic.0.0.9.nupkg  assistmaigic.0.0.1.nupkg
AssistmAIgic DB/: Order Book.csv
AssistmAIgic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MCP Tools/: Categorize_Emails_Solution.uis  EmailOperations.uis  GetOrderDetails.uis  ReviewEmailResponseSolution.uis  SentimentAnalysisSolution.uis
__uipath/: state.db
